2016-06-22  Oliver Kiddle  <opk@zsh.org>

	* 38735: Completion/Unix/Command/_find,
	Completion/Zsh/Type/_globquals: support verbose style to allow
	clearer but less compact descriptions for time specifiers

	* 38733: Completion/X/Command/_rdesktop: completion for xfreerdp

2016-06-21  Peter Stephenson  <p.stephenson@samsung.com>

	* 38737: Functions/Misc/zcalc, Doc/Zsh/contrib.yo: document some
	zcalc variable usage and make other variables start with "_".

	* 38736: Completion/Zsh/Type/_module_math_func,
	Completion/Zsh/Type/_user_math_func, Doc/Zsh/contrib.yo,
	Functions/Misc/zcalc: various RPN mode enhancments for zcalc.

	* 38734: Src/loop.c, Test/A01grammar.ztst: fix final case
	clauses terminating with ;&.

	* 38692: Doc/Zsh/restricted.yo, Src/params.c: IFS can't be
	changed in restricted mode.

2016-06-19  Barton E. Schaefer  <schaefer@brasslantern.com>

	* 38715: Doc/Zsh/contrib.yo, Functions/Zle/add-zle-hook-widget:
	assorted ksharrays fixes; assign an index to any hook that is
	added without one, to preserve append ordering

2016-06-18  Barton E. Schaefer  <schaefer@zsh.org>

	* unposted: Functions/Misc/zed: localoptions noksharrays

	* unposted: Doc/Zsh/options.yo: when ksharrays is set, braces are
	required for all parameter expansions with colon-modifiers

2016-06-18  Oliver Kiddle  <opk@zsh.org>

	* 38713: Completion/Unix/Type/_dates: don't add calendar matches
	when not immediately entering menu selection

	* 38707: Completion/Zsh/Type/_globquals,
	Completion/Unix/Type/_files, Completion/Unix/Type/_path_files:
	strip suffix for glob qualifier completion

	* 38703: Completion/Unix/Command/_su: support su options on macOS

2016-06-16  Peter Stephenson  <p.stephenson@samsung.com>

	* 38693: Doc/Zsh/contrib.yo, Functions/Misc/zcalc,
	Functions/Zle/zcalc-auto-insert: Add RPN mode to zcalc.

	* unposted: Doc/Zsh/params.yo: fix parentheses for getrusage().

2016-06-16  Jun-ichi Takimoto <takimoto-j@kba.biglobe.ne.jp>
